--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,11 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.5.3"
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
     // Dagger2
     def dagger2_v = "2.40.5"
     implementation "com.google.dagger:dagger:$dagger2_v"
