--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ android {
 }
 
 dependencies {
+
+    implementation 'io.palaima:smoothbluetooth:0.1.0'
+
     def nav_version = "2.5.3"
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
